--- a/src/biz/ritter/res/中文字/Sammlung.properties
+++ b/src/biz/ritter/res/中文字/Sammlung.properties
@@ -1,6 +1,82 @@
-# Sammlung
+#
+# Copyright 2017 Sebastian Ritter
+#
+# Lizenziert unter der EUPL, nur Version 1.1 ("Lizenz");
+# 
+# Sie dürfen dieses Werk ausschließlich gemäß
+# dieser Lizenz nutzen.
+# Eine Kopie der Lizenz finden Sie hier:
+#
+# http://ec.europa.eu/idabc/eupl5
+# 
+# Sofern nicht durch anwendbare Rechtsvorschriften
+# gefordert oder in schriftlicher Form vereinbart, wird
+# die unter der Lizenz verbreitete Software "so wie sie
+# ist", OHNE JEGLICHE GEWÄHRLEISTUNG ODER BEDINGUNGEN -
+# ausdrücklich oder stillschweigend - verbreitet.
+# Die sprachspezifischen Genehmigungen und Beschränkungen
+# unter der Lizenz sind dem Lizenztext zu entnehmen.
+#
+
 中文字=zhōng wén zì=Chinesische Schriftzeichen
 德国人=dé guó rén=Deutscher
 德国=dé guó=Deutschland
-人=rén=Mensch
+人=rén=Mensch | Person
 国=guó=Land, Staat, Königreich
+零=líng=0
+一=yī=1
+二=èr=2
+二=liǎng=2
+三=sān=3
+四=sì=4
+伍=wǔ=5
+六=liù=6
+七=qī=7
+八=bā=8
+九=jiǔ=9
+十=shí=10
+佰=bǎi=100
+仟=qiān=1.000
+萬=wàn=10.000
+谢谢=xiè xiè=Danke
+你呢=nǐ nē=und du / wie ist es mit ihnen
+对不起=duì bù qǐ=Entschuldigung
+瑞士=ruì shì=Schweiz
+奥地利=ào dì lì=Österreich
+你好=nǐ hǎo=Guten Tag
+我叫=wǒ jiào=ich heiße
+你=nǐ=du
+我=wǒ=ich
+叫=jiào=heißen
+美国=měi guó=Amerika
+美国人=mei guó rén=Amerikaner
+英国=yīng guó=Vereinigtes Königreich
+先生=xiān shēng=Herr | Mann
+女士=nǚ shì=Frau | Lady
+是=shì=ja
+不是=bù shì=nein (nicht ja)
+不=bù=nicht
+不=bù=nein
+是=shì=sein
+他=tā=er
+什么=shén me=was
+也=yě=auch
+呢=ne=nicht war? (Fragebestätigung)
+星期一=xīng qī yī=Montag
+星期二=xīng qī èr=Dienstag
+星期三=xīng qī sān=Mittwoch
+星期四=xīng qī sì=Donnerstag
+星期五=xīng qī wǔ=Freitag
+星期六=xīng qī lìu=Samstag
+星期日=xīng qī rì=Sonntag
+媽罵麻馬嗎=mā=Mutter
+媽媽=māma=Mama
+麻=má=Hanf
+马=mă=Pferd
+骂=mà=schimpfen
+吗=ma=Fragepartikel (Fragepartikel)
+这=zhè=dieser, diese, dieses
+个=gè=Zahlpartikel (Zahlpartikel)
+我们是五个人=wǒ men shì wǔ gè rén=Wir sind 5 Personen
+
+
